--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -61,9 +61,9 @@
         <hr/>
         <p class="status">{{race.status}}</p>
         <p class="raceTime">{{race.Time.time || 'DNF'}}</p>
-        <p class="fastestLap" fastestLap={{race.FastestLap.TimeOrder}}>Fastest Lap: {{race.FastestLap.Time.time}}  ({{race.FastestLap.lap}})</p>
+        <p class="fastestLap" fastestLap={{race.FastestLap.TimeOrder}}>Fastest Lap: {{race.FastestLap.Time.time || 'N/A'}}  ({{race.FastestLap.lap || 'N/A'}})</p>
         <p class="avgSpeed" avgSpeed={{race.FastestLap.AverageSpeedOrder}}>Avg Speed: {{race.FastestLap.AverageSpeed.speed || 'N/A'}} {{race.FastestLap.AverageSpeed.units}}</p>
-        <p class="grid" grid={{race.grid}}>Grid Position: {{race.grid}}</p>
+        <p class="grid" grid={{race.grid}}>Grid Position: {{race.grid || 'N/A'}}</p>
       </div>
     </li>
   </ul>
