tweaking display for mobile views

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -8,7 +8,7 @@
       </ul>
     </span></h3>
     <canvas id="bar" class="chart chart-bar" data="chartData"
-    labels="chartLabels" legend="true" series="chartSeries" options="chartOptions"
+    labels="chartLabels" series="chartSeries" options="chartOptions"
     click="onClick">
   </canvas>
   <div ng-hide="content_loaded">
