--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,9 @@ body {
   opacity : 0.2;*/
 }
 
+#isotopeContainer {
+  padding-left: 5px;
+}
 .item > hr {
   margin-top: 2px;
   margin-bottom: 2px;
