--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ body {
   /*white-space: nowrap;*/
   text-align: center;
   min-width: 165px;
+  background-color: white;
   /*background-image: url(/images/helmet-icon.png);
   opacity : 0.2;*/
 }
