--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -24,7 +24,7 @@
 </div>
 <hr/>
 <canvas id="bar" class="chart chart-bar" data="chartData"
-    labels="chartLabels" legend="true" series="chartSeries" options="chartOptions"
+    labels="chartLabels" chart-legend="true" series="chartSeries" options="chartOptions"
     click="onClick">
   </canvas> 
 <div ng-show="content_loaded">
