small optimisations on results page

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -38,7 +38,7 @@
   <img width="300px" src="./images/loading.gif">
 </div>
 <canvas id="line" class="chart chart-line" data="chartData"
-  labels="chartLabels" chart-legend="true" series="series" options="options"
+  labels="chartLabels" chart-legend="true" series="series" options="chartOptions"
   click="onClick">
 </canvas> 
 <hr/>
