news styling tweak

--- a/partials/news.html
+++ b/partials/news.html
@@ -4,12 +4,23 @@
 <div ng-show="content_loaded">
   <h3>Latest News</h3>
 
-  <div class="article {{article.type}}" ng-repeat="article in results">
-    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
-    <img class="img-responsive center-block img-thumbnail" ng-src="{{article.image.url}}" />
-    <span ng-bind-html="article.content"></span>
-    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
-    
+  <div ng-repeat="article in results">
+  	<div class="article {{article.type}}" ng-if="article.type == 'news'">
+	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
+	    <img class="img-responsive center-block img-thumbnail" ng-src="{{article.image.url}}" />
+	    <span ng-bind-html="article.content"></span>
+	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
+  	</div>
+  	<div class="article {{article.type}}" ng-if="article.type == 'twitter'">
+	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
+	    <img class="img-responsive center-block img-thumbnail" ng-src="{{article.image.url}}" />
+	    <span ng-bind-html="article.content"></span>
+	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
+  	</div>
+    <div class="article {{article.type}}" ng-if="article.type == 'related'">
+	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
+	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
+  	</div>
 
   </div>
 
