--- a/partials/news.html
+++ b/partials/news.html
@@ -3,7 +3,6 @@
 </div>
 <div ng-show="content_loaded">
   <h3>Latest News</h3>
-
   <div ng-repeat="article in results">
   	<div class="article {{article.type}}" ng-if="article.type == 'news'">
 	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
@@ -12,10 +11,9 @@
 	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
   	</div>
   	<div class="article {{article.type}}" ng-if="article.type == 'twitter'">
+	    <img class="icon" src="./images/icons/icon-twitter.png" /><span ng-bind-html="article.content"></span>
 	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
-	    <img class="img-responsive center-block img-thumbnail" ng-src="{{article.image.url}}" />
-	    <span ng-bind-html="article.content"></span>
-	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
+	    <span class="date"><i>{{article.publishedDate}}</i></span>
   	</div>
     <div class="article {{article.type}}" ng-if="article.type == 'related'">
 	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
