--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -11,7 +11,10 @@
         </li>
       </ul>
     </span></h3>
-
+  <canvas id="bar" class="chart chart-bar" data="chartData"
+    labels="chartLabels" series="chartSeries" options="chartOptions"
+    click="onClick">
+  </canvas>
   <table class="table table-striped table-bordered table-condensed">
     <tr>
       <th>Position</th>
