news styling tweaks

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -2,7 +2,7 @@
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
-  <h3>Results / Race Schedule<span class="divider"> .:. </span>
+  <h3>Results &amp; Race Schedule<span class="divider"> .:. </span>
     <span class="dropdown">
       <a class="btn btn-default" data-toggle="dropdown" href="/results">{{ season }} <b class="caret"></b></a>
       <ul ng-model="seasonSelection" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="dropdownYear">
