--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -23,7 +23,7 @@
       <th>Wins</th>
     </tr>
     <tr ng-repeat="team in teams.ConstructorStandings">
-      <td>{{team.position}}</td>
+      <td class="standingPosition">{{team.position}}</td>
       <td><img ng-src="./images/flags/{{team.Constructor.nationality}}.png" alt="{{team.Constructor.nationality}}" /> <a ui-sref="viewConstructor({id:team.Constructor.constructorId})">{{team.Constructor.name}}</a></td>
       <td>{{team.points}}</td>
       <td>{{team.wins}}</td>
