--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -26,7 +26,7 @@
       <th>Constructor</th>
     </tr>
     <tr ng-repeat="driver in drivers.DriverStandings">
-      <td>{{driver.position}}</td>
+      <td class="standingPosition">{{driver.position}}</td>
       <td><img ng-src="./images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
       <td>{{driver.Driver.code}}</td>
       <td>{{driver.points}}</td>
