--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -5,28 +5,17 @@
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
-  <table class="table constructorable table-striped table-bordered table-hover table-condensed">
-    <tr>
-      <td><h2><span class="consName">{{team.StandingsLists[0].ConstructorStandings[0].Constructor.name}}</span></h2></td>
-    </tr>
-    <tr>
-      <td><img class="img-responsive center-block img-thumbnail" ng-src="{{team.imageUrl}}" /></td>
-    </tr>
-    <tr>
-      <td><a target="_blank" ng-href="{{team.StandingsLists[0].ConstructorStandings[0].Constructor.url}}"/>Wiki Link</td>
-    </tr>
-  </table>
+  <h3>{{team.StandingsLists[0].ConstructorStandings[0].Constructor.name}}</h3>
+  <img class="img-responsive center-block img-thumbnail" ng-src="{{team.imageUrl}}" />
 </div>
-<hr/>
 <h4>Race Wins History</h4>
 <div ng-hide="chartLoaded">
   <img width="300px" src="./images/loading.gif">
 </div>
-<hr/>
 <canvas id="bar" class="chart chart-bar" data="chartData"
-    labels="chartLabels" chart-legend="true" series="chartSeries" options="chartOptions"
-    click="onClick">
-  </canvas> 
+  labels="chartLabels" chart-legend="true" series="chartSeries" options="chartOptions"
+  click="onClick">
+</canvas> 
 <div ng-show="content_loaded">
   <table class="table constructortable table-striped table-bordered table-condensed">
     <tr>
