--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -16,6 +16,15 @@
     labels="chartLabels" series="chartSeries" options="chartOptions"
     click="onClick">
   </canvas>
+  
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <td>Position</td><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
+    </tr>
+    <tr>
+      <td>Points</td><td>25pts</td><td>18pts</td><td>15pts</td><td>12pts</td><td>10pts</td><td>8pts</td><td>6pts</td><td>4pts</td><td>2pts</td><td>1pt</td>
+    </tr>
+  </table>
   <table class="table table-striped table-bordered table-condensed">
     <tr>
       <th>Position</th>
