looking to merge pit times to the lap times

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -19,10 +19,10 @@
   
   <table class="table table-striped table-bordered table-condensed">
     <tr>
-      <td>Position</td><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
+      <th>Pos.</th><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
     </tr>
     <tr>
-      <td>Points</td><td>25pts</td><td>18pts</td><td>15pts</td><td>12pts</td><td>10pts</td><td>8pts</td><td>6pts</td><td>4pts</td><td>2pts</td><td>1pt</td>
+      <th>Points</th><td>25</td><td>18</td><td>15</td><td>12</td><td>10</td><td>8</td><td>6</td><td>4</td><td>2</td><td>1</td>
     </tr>
   </table>
   <table class="table table-striped table-bordered table-condensed">
