improved the loading text and position

--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -1,7 +1,7 @@
-<div ng-show="no_data">
+<div ng-show="no_data" class="fullscreenCenter">
   There is no data to display
 </div>
-<div ng-hide="content_loaded">
+<div ng-hide="content_loaded" class="fullscreenCenter">
   Just grabbing your data...
 </div>
 <div ng-hide="no_data" ng-show="content_loaded">
