--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Roboto', sans-serif,  Arial, "Helvetica Condensed", Helvetica, sans-serif;
 }
@@ -334,7 +338,13 @@ img.arrow {
   width: 50%;
 }
 
-.chart-container {
-
+.fullscreenCenter{
+  font-size: 2em;
+  margin: auto;
+  padding-top: 20%;
+  text-align: center;
+  vertical-align: bottom;
+  width: 100%;
+  height:50vh;
 }
 
