--- a/partials/circuit-view.html
+++ b/partials/circuit-view.html
@@ -1,4 +1,4 @@
-<div ng-hide="content_loaded">
+<div ng-hide="content_loaded" class="fullscreenCenter">
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
