--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -8,7 +8,7 @@
       </ul>
     </span></h3>
     
-  <div ng-hide="content_loaded">
+  <div ng-hide="content_loaded" class="fullscreenCenter">
   Just grabbing your data...
   </div>
   <div ng-show="content_loaded">
