--- a/partials/circuits.html
+++ b/partials/circuits.html
@@ -23,5 +23,6 @@
       <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
 <!--       <td><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td> -->
     </tr>
+    <tr><td colspan="2" class="footerNarrow"></td></tr>
   </table>
 </div>
