--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -40,6 +40,7 @@
         <td>{{result.ConstructorStandings[0].points}}</td>
         <td>{{result.ConstructorStandings[0].wins}}</td>
       </tr>
+      <tr><td colspan="5" class="footerNarrow"></td></tr>
     </table>
   </div>
 </div>
