--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -36,5 +36,6 @@
       <td>{{team.points}}</td>
       <td>{{team.wins}}</td>
     </tr>
+    <tr><td colspan="4" class="footerNarrow"></td></tr>
   </table>
 </div>
