--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -42,5 +42,6 @@
       <td>{{driver.wins}}</td>
       <td><a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
     </tr>
+    <tr><td colspan="6" class="footerNarrow"></td></tr>
   </table>
 </div>
