--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -103,6 +103,7 @@
       <td ng-if="race.date > currentDate"><i>Coming Soon</i></td>
       <td ng-if="race.date < currentDate"><a ui-sref="viewResult({season: season, round: race.round})">Result</td>
     </tr>
+    <tr><td colspan="5" class="footerNarrow"></td></tr>
   </table>
 </div>
 
