--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -30,7 +30,7 @@
       <th>Points</th>
       <th>Wins</th>
     </tr>
-    <tr ng-repeat="team in teams.ConstructorStandings">
+    <tr ng-repeat="team in teams.ConstructorStandings"  class="{{ GetClassOverride(team) }}">
       <td class="standingPosition">{{team.position}}</td>
       <td><img ng-src="./images/flags/{{team.Constructor.nationality}}.png" alt="{{team.Constructor.nationality}}" /> <a ui-sref="viewConstructor({id:team.Constructor.constructorId})">{{team.Constructor.name}}</a></td>
       <td>{{team.points}}</td>
