--- a/partials/news.html
+++ b/partials/news.html
@@ -11,8 +11,8 @@
 	    <span><b>{{article.publisher}}</b> - <i>{{article.publishedDate}}</i></span>
   	</div>
   	<div class="article {{article.type}}" ng-if="article.type == 'twitter'" timestamp={{article.timestamp}}>
-	    <img class="icon" src="./images/icons/icon-twitter.png" /><span ng-bind-html="article.content"></span>
-	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
+	    <img class="icon" ng-src="{{article.pic}}" /><span ng-bind-html="article.content"></span>
+	    <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a><img class="icon icon_small" src="./images/icons/icon-twitter.png" />
 	    <span class="date"><i>{{article.publishedDate}}</i></span>
   	</div>
     <div class="article {{article.type}} img-thumbnail" ng-if="article.type == 'related'" timestamp={{article.timestamp}}>
