--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -10,8 +10,9 @@
   <h4>Social Networking</h4>
   <div ng-repeat="article in tweets">
     <div class="article {{article.type}}" ng-if="article.type == 'twitter'">
-      <img class="icon" src="./images/icons/icon-twitter.png" /><span ng-bind-html="article.content"></span>
+      <img class="icon" ng-src="{{article.pic}}" /><span ng-bind-html="article.content"></span>
       <a target="_blank" ng-href="{{article.unescapedUrl}}"><h4 ng-bind-html="article.titleNoFormatting"></h4></a>
+      <img class="icon icon_small" src="./images/icons/icon-twitter.png" />
       <span class="date"><i>{{article.publishedDate}}</i></span>
     </div>
   </div>
