--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -11,36 +11,41 @@
         </li>
       </ul>
     </span></h3>
-  <canvas id="bar" class="chart chart-bar" data="chartData"
-    labels="chartLabels" series="chartSeries" options="chartOptions"
-    click="onClick">
-  </canvas>
-  
-  <table class="table table-striped table-bordered table-condensed">
-    <tr>
-      <th>Pos.</th><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
-    </tr>
-    <tr>
-      <th>Points</th><td>25</td><td>18</td><td>15</td><td>12</td><td>10</td><td>8</td><td>6</td><td>4</td><td>2</td><td>1</td>
-    </tr>
-  </table>
-  <table class="table table-striped table-bordered table-condensed">
-    <tr>
-      <th>Position</th>
-      <th>Name</th>
-      <th>Code</th>
-      <th>Points</th>
-      <th>Wins</th>
-      <th>Constructor</th>
-    </tr>
-    <tr ng-repeat="driver in drivers.DriverStandings">
-      <td class="standingPosition">{{driver.position}}</td>
-      <td><img ng-src="./images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
-      <td>{{driver.Driver.code}}</td>
-      <td>{{driver.points}}</td>
-      <td>{{driver.wins}}</td>
-      <td><img ng-src="./images/flags/{{driver.Constructors[0].nationality}}.png" alt="{{driver.Constructors[0].nationality}}" />  <a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
-    </tr>
-    <tr><td colspan="6" class="footerNarrow"></td></tr>
-  </table>
+  <div ng-hide="has_content">
+    <p>There is currently no data for your selected season.</p>
+  </div>
+  <div ng-show="has_content">
+    <canvas id="bar" class="chart chart-bar" data="chartData"
+      labels="chartLabels" series="chartSeries" options="chartOptions"
+      click="onClick">
+    </canvas>
+    
+    <table class="table table-striped table-bordered table-condensed">
+      <tr>
+        <th>Pos.</th><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
+      </tr>
+      <tr>
+        <th>Points</th><td>25</td><td>18</td><td>15</td><td>12</td><td>10</td><td>8</td><td>6</td><td>4</td><td>2</td><td>1</td>
+      </tr>
+    </table>
+    <table class="table table-striped table-bordered table-condensed">
+      <tr>
+        <th>Position</th>
+        <th>Name</th>
+        <th>Code</th>
+        <th>Points</th>
+        <th>Wins</th>
+        <th>Constructor</th>
+      </tr>
+      <tr ng-repeat="driver in drivers.DriverStandings">
+        <td class="standingPosition">{{driver.position}}</td>
+        <td><img ng-src="./images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
+        <td>{{driver.Driver.code}}</td>
+        <td>{{driver.points}}</td>
+        <td>{{driver.wins}}</td>
+        <td><img ng-src="./images/flags/{{driver.Constructors[0].nationality}}.png" alt="{{driver.Constructors[0].nationality}}" />  <a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
+      </tr>
+      <tr><td colspan="6" class="footerNarrow"></td></tr>
+    </table>
+  </div>
 </div>
