--- a/partials/circuits.html
+++ b/partials/circuits.html
@@ -11,18 +11,22 @@
         </li>
       </ul>
     </span></h3>
-
-  <table class="table table-striped table-bordered table-condensed">
-    <tr>
-      <th>Name</th>
-      <th>Country</th>
-<!--       <th>Details</th> -->
-    </tr>
-    <tr ng-repeat="circuit in circuits.Circuits">
-      <td><a ui-sref="viewCircuit({id: circuit.circuitId})">{{circuit.circuitName}}</a></td>
-      <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
-<!--       <td><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td> -->
-    </tr>
-    <tr><td colspan="2" class="footerNarrow"></td></tr>
-  </table>
+  <div ng-hide="has_content">
+      <p>There is currently no data for your selected season.</p>
+    </div>
+    <div ng-show="has_content">
+    <table class="table table-striped table-bordered table-condensed">
+      <tr>
+        <th>Name</th>
+        <th>Country</th>
+  <!--       <th>Details</th> -->
+      </tr>
+      <tr ng-repeat="circuit in circuits.Circuits">
+        <td><a ui-sref="viewCircuit({id: circuit.circuitId})">{{circuit.circuitName}}</a></td>
+        <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
+  <!--       <td><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td> -->
+      </tr>
+      <tr><td colspan="2" class="footerNarrow"></td></tr>
+    </table>
+  </div>
 </div>
